--- a/web_static/styles/102-common.css
+++ b/web_static/styles/102-common.css
@@ -1,22 +1,20 @@
-*{
-        box-sizing: border-box;
-}
 body {
-        height: 0%;
-        margin: 0%;
-        padding:0%;
-        color:  #484848;
-        font-size: 14px;
-        font-family: Circular,"Helvetica Neue", Helvetica, Arial, sans-serif;
-        width: 100%;
-}
-.container {
-        max-width: 1000px;
-        margin: 30px auto;
-}
-
-@media only screen and (min-width : 150px) and (max-width : 700px) {
-        html {
-                width: 1000px;
-        }
-}
+    margin: 0px;
+    padding: 0px;
+    color: #484848;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 14px;
+    font-family: Circular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+  .container {
+    max-width: 1000px;
+    margin: 30px auto;
+  }
+  @media screen and (max-width: 1000px) {
+    .container {
+      width: 95%;
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
