--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -1,148 +1,102 @@
-.filters {
-        height: 70px;
-        width: 100%;
-        border: 1px solid #DDDDDD;
-        border-radius: 4px;
-        position: relative;
-}
-
-
-.popover {
-        display: none;
-        background-color: #FAFAFA;
-        width: 100%;
-        border: 1px solid #DDDDDD;
-        border-radius: 4px;
-        padding-top: 10%;
-        padding-bottom: 10%;
-        padding-left: 0;
-}
-.popover li {
-        list-style: none;
-}
-
-.popover h2{
-        display: inline-block;
-        margin-bottom: 0;
-        margin-top: 0;
-        font-size: 16px;
-}
-
-.popover li{
-        padding: 0 10%;
-        margin: .5rem 0;
-}
-
-.popover .pop{
-        padding: 10%;
-}
-
-.popover .popi {
-        padding: 10% auto;
-}
-
-.popover li ul {
-        padding-left: 0;
-}
-
-
-
-
-.locations:hover .popover {
-        display:block;
-}
-.amenities:hover .popover {
-        display:block;
-}
-/* .locations:hover + ul {background: #555;}
-ul li:hover ul {display: block;}
-
-.filters div:hover + .popover{
-        display: block;
-} */
-
-button {
-        position: absolute;
-        font-size: 18px;
-        background-color: #FF5A5F;
-        color: #FFFFFF;
-        top: 50%;
-        height: 48px;
-        margin-top: -24px;
-        right: 30px;
-        width: 20%;
-        border: none;
-        border-radius: 4px;
-        overflow: auto;
-}
-
-button:hover {
-        opacity: 90%;
-}
-
-.locations {
-        position: absolute;
-        height: 100%;
-        width: 25%;
-        border-right: 1px solid #DDDDDD;
-}
-
-.filters .amenities {
-        position: absolute;
-        height: 100%;
-        width: 25%;
-        margin-left: 25%;
-}
-
-.locations h3, .amenities h3 {
-        box-sizing: border-box;
-        font-weight: 600;
-        margin-bottom: 0;
-        margin-left: 25%;
-        color: inherit;
-}
-
-.locations h4, .amenities h4 {
-        box-sizing: border-box;
-        margin-top: 0;
-        margin-left: 25%;
-        font-weight: 400;
-        font-size: 14px;
-        color: inherit;
-}
-
-@media only screen and (min-width : 150px) and (max-width : 700px)
-{
-	.filters
-	{
-		width: 95%;
-		margin: 0 auto;
-                height: 15ch;
-	}
-
-        .locations h4, .amenities h4 {
-                font-size: 1.5em;
-                margin-left: 10vw;
-        }
-
-        .locations h3, .amenities h3 {
-                font-size: 1.5em;
-                margin-left: 10vw;
-        }
-
-        button {
-                font-size: 1.5em;
-        }
-
-        .popover h2 {
-                font-size: 1.5em;
-        }
-
-        .popover li {
-                font-size: 1.4rem;
-        }
-}
-
-/*
-
-*/
+div.container section.filters {
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px #dddddd solid;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+  }
+  
+  div.container section.filters button {
+    font-size: 18px;
+    background-color: #ff5a5f;
+    color: #ffffff;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    margin-right: 30px;
+    margin-left: auto;
+  }
+  
+  body div.container section.filters button:hover {
+    opacity: 90%;
+  }
+  
+  div.container section.filters div {
+    height: 100%;
+    width: 25%;
+    display: block;
+    position: relative;
+  }
+  div.container section.filters div.locations {
+    border-right: 1px #dddddd solid;
+  }
+  
+  div.container section.filters div h3 {
+    font-weight: 600;
+    margin: 10px;
+    margin-left: 20%;
+  }
+  
+  div.container section.filters div h4 {
+    font-weight: 400;
+    margin: 0px;
+    margin-left: 20%;
+    font-size: 14px;
+  }
+  
+  div.container section.filters .popover {
+    background-color: #fafafa;
+    border: 1px #dddddd solid;
+    border-radius: 4px;
+    list-style: none;
+    padding: 20px;
+    visibility: hidden;
+    position: absolute;
+    width: 83%;
+  }
+  div.container section.filters .popover ul {
+    list-style: none;
+    padding-left: 20px;
+  }
+  div.container section.filters .popover h2 {
+    font-size: 16px;
+  }
+  div.container section.filters .locations:hover .popover,
+  div.container section.filters .amenities:hover .popover {
+    visibility: visible;
+  }
+  @media screen and (max-width: 575px) {
+    .filters {
+      width: 100%;
+    }
+    .filters button {
+      width: 90%;
+    }
+    .filters .locations,
+    .filters .amenities {
+      width: 100%;
+    }
+  
+    .filters .locations h4 {
+      position: relative;
+      top: -6px;
+    }
+  
+    .filters .amenities h4 {
+      position: relative;
+      top: -6px;
+    }
+    .filters .locations {
+      border-bottom: 1px solid #dddddd;
+      width: 100%;
+    }
+    div.container section.filters .locations:hover .popover,
+    div.container section.filters .amenities:hover .popover {
+      visibility: visible;
+      position: relative;
+      top: -16px;
+    }
+  }
