--- a/web_static/styles/102-places.css
+++ b/web_static/styles/102-places.css
@@ -1,318 +1,197 @@
-/* PARENT ARTICLE */
 .places {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-content: flex-start;
-        flex-direction: row;
-}
-
-.places h1 {
-        font-size: 30px;
-        color: inherit;
-        text-align: left;
-        margin-bottom: 0;
-        padding-left: 20px;
-        flex: 1 1 100%;
-}
-
-.places article {
-        width: 390px;
-        padding: 20px;
-        margin: 20px;
-        border: 1px solid #FF5A5F;
-        border-radius: 4px;
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        min-height: 650px;
-        align-content: flex-start;
-        justify-content: center;
-}
-
-
-/* CIRCLE PRICE */
-.places article h2 {
-        font-size: 30px;
-        margin-top: 0;
-        margin-left: 10%;
-        margin-bottom: 0%;
-        text-align: center;
-        flex: 1 1 60%;
-}
-
-.price_by_night {
-        min-width: 60px;
-        height: 60px;
-        font-size: 30px;
-        color: #FF5A5F;
-        border: 4px solid #FF5A5F;
-        border-radius: 50%;
-        flex: 0 1 10%;
-}
-
-.price_by_night p {
-        margin-top: 20%;
-        width: 100%;
-        text-align: center;
-}
-
-/* PICS AND INFO */
-.information {
-        display: flex;
-        flex: 1 1 100px;
-        justify-content: space-evenly;
-        align-items: center;
-        margin-top: 5%;
-        /* wait */
-        border-top: 1px solid #DDDDDD;
-        border-bottom: 1px solid #DDDDDD;
-        height: 90px;
-        text-align: center;
-}
-
-.information div {
-        display: flex;
-        background-size: 60%;
-        background-position-x: 20px;
-}
-
-.information div p {
-        /* position: absolute; */
-        display: inline-block;
-        text-align: center;
-        padding-top: 50px;
-        bottom: 0;
-}
-
-.max_guest {
-        background-image: url("../images/icon_group.png");
-        background-repeat: no-repeat;
-        width: 100px;
-        height: 100%;
-        justify-content: center;
-        /* position: relative; */
-}
-
-.number_rooms {
-        background-image: url("../images/icon_bed.png");
-        background-repeat: no-repeat;
-        width: 100px;
-        height: 100%;
-        justify-content: center;
-        /* position: relative; */
-}
-
-
-.number_bathrooms {
-        background-image: url("../images/icon_bath.png");
-        background-repeat: no-repeat;
-        width: 100px;
-        height: 100%;
-        bottom: 0;
-        /* position: relative; */
-        justify-content: center;
-}
-
-/* USER */
-.user {
-        display: flex;
-        margin: 20px 0 5px 0;
-        flex: 1 1 100%;
-        justify-content: flex-start;
-}
-
-/* AMENITIES */
-.places .amenities {
-        margin: 0;
-        margin-top: 40px;
-        flex: 1 1 100%;
-}
-
-.places article .amenities h2 {
-        margin: 0;
-        font-size: 16px;
-        border-bottom: 1px solid #DDDDDD;
-        text-align: left;
-}
-
-.places article ul {
-        list-style: none;
-        padding: 0;
-}
-
-.places article .amenities ul p {
-        text-align: left;
-        margin-left: 25%;
-        margin-bottom: 0;
-}
-
-.places article .amenities ul .tv {
-        background-image: url("../images/icon_tv.png");
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 1.3em;
-        height: 1.3em;
-        justify-content: center;
-        width: 30%;
-
-        /* position: relative; */
-}
-
-.places article .amenities ul .wifi {
-        background-image: url("../images/icon_wifi.png");
-        background-repeat: no-repeat;
-        background-size: contain;
-        justify-content: center;
-        width: 1.3em;
-        height: 1.3em;
-        width: 30%;
-        /* position: relative; */
-}
-
-.places article .amenities ul .pet {
-        background-image: url("../images/icon_pets.png");
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 1.3em;
-        height: 1.3em;
-        width: 30%;
-        justify-content: center;
-        /* position: relative; */
-}
-
-/* REVIEW */
-.places article .reviews {
-        flex: 1 1 100%;
-        margin-top: 40px;
-}
-
-.places article .reviews h2 {
-        font-size: 16px;
-        border-bottom: 1px solid #DDDDDD;
-        margin: 0;
-        text-align: left;
-}
-
-.places article .reviews ul h3 {
-        font-size: 14px;
-}
-
-.places article .reviews ul p {
-        font-size: 12px;
-}
-
-@media only screen and (min-width : 150px) and (max-width : 700px) {
-        .places {
-                flex-direction: column;
-                flex-wrap: nowrap;
-                justify-content: center;
-                align-content: center;
-                align-items: center;
-        }
-
-        .places h1 {
-                font-size: 4em;
-        }
-
-        .places article {
-                width: 80%;
-        }
-
-        .places article h2 {
-                font-size: 3.5em;
-                flex: 1 1 100%;
-                margin: 0;
-                height: 12vh;
-                justify-content: center;
-                align-items: center;
-                display: flex;
-        }
-
-        .price_by_night {
-                min-width: 130px;
-                height: 130px;
-                flex: 0 1 0%;
-                justify-content: flex-start;
-        }
-
-        .price_by_night p {
-                font-size: 2em;
-                margin-bottom: 5%;
-        }
-
-        .information {
-                margin-top: 3vh;
-                flex: 1 1 100%;
-                height: 30vh;
-                border-top: 2px solid #DDDDDD;
-                border-bottom: 2px solid #DDDDDD;
-        }
-
-        .information div {
-                background-size: 100%;
-                background-position-x: 0;
-        }
-
-        .information div p {
-                display: inline;
-                padding-top: 16vh;
-                font-size: 1.9em;
-                margin: 0;
-        }
-
-        .user {
-                margin: 7vh 0 4vh 0;
-                font-size: 1.9em;
-        }
-
-        .description {
-                font-size: 1.9em;
-        }
-
-        .places article .amenities h2 {
-                font-size: 2.5em;
-                height: 8vh;
-                justify-content: flex-start;
-        }
-
-        .places article .amenities ul .tv {
-                width: 4em;
-                height: 4em;
-                width: 50%;
-                align-items: flex-end;
-        }
-
-        .places article .amenities ul .wifi {
-                width: 4em;
-                height: 4em;
-                width: 50%;
-        }
-
-        .places article .amenities ul .pet {
-                width: 4em;
-                height: 4em;
-                width: 50%;
-        }
-
-        .places article .amenities ul p {
-                text-align: left;
-                margin-left: 25%;
-                padding-top: 0.4em;
-                font-size: 2em;
-        }
-
-        .places article .reviews h2 {
-                font-size: 2.5em;
-                height: 8vh;
-                justify-content: flex-start;
-        }
-
-        .places article .reviews ul h3 {
-                font-size: 2em;
-        }
-
-        .places article .reviews ul p {
-                font-size: 1.7em;
-        }
-}
+    width: 100%;
+    border: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  
+  .places h1 {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    flex: 0 1 100%;
+  }
+  
+  article {
+    border: 1px solid #ff5a5f;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
+    width: 390px;
+    margin: 20px;
+    padding: 20px;
+  }
+  
+  article > h2 {
+    font-size: 30px;
+    align-self: center;
+    margin: 0 0 0 0;
+  }
+  
+  .price_by_night {
+    color: #ff5a5f;
+    border: 4px solid #ff5a5f;
+    min-width: 60px;
+    height: 60px;
+    font-size: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+  }
+  .price_by_night > p {
+    margin: 0 0 0 0;
+  }
+  
+  .information {
+    height: 80px;
+    width: 100%;
+    border-top: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd;
+    margin-top: 30px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .max_guest,
+  .number_rooms,
+  .number_bathrooms {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* width: 100px; */
+  }
+  
+  .information [class^='icon'] {
+    height: 50px;
+    width: 50px;
+    background-repeat: no-repeat;
+  }
+  
+  /* .max_guest > p,
+  .number_rooms > p,
+  .number_bathrooms > p {
+    margin-top: auto;
+    margin-bottom: auto;
+  } */
+  
+  .guest_icon {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url('../images/icon_group.png') no-repeat center;
+    background-position: center;
+  }
+  
+  .bed_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url('../images/icon_bed.png') no-repeat center;
+  }
+  
+  .bath_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url('../images/icon_bath.png') no-repeat center;
+  }
+  
+  article .amenities,
+  article .reviews {
+    margin-top: 40px;
+    width: 100%;
+  }
+  
+  article .amenities h2 {
+    font-size: 16px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #dddddd;
+    position: relative;
+    left: -8px;
+  }
+  
+  article .reviews h2 {
+    font-size: 16px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #dddddd;
+  }
+  
+  article .amenities ul {
+    padding-left: 0;
+    position: relative;
+    left: -20px;
+  }
+  article .reviews ul {
+    padding-left: 0;
+  }
+  
+  article .amenities li {
+    list-style-type: none;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+  }
+  
+  article .reviews li {
+    list-style-type: none;
+  }
+  article .reviews h3 {
+    font-size: 14px;
+    margin: 5px auto;
+  }
+  article .reviews p {
+    font-size: 12px;
+    margin: 5px auto 20px auto;
+  }
+  
+  .icon-tv,
+  .icon-wifi,
+  .icon-pets {
+    background-image: url(../images/icon_tv.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-right: 10px;
+    height: 20px;
+    width: 20px;
+  }
+  
+  .icon-tv {
+    background-image: url(../images/icon_tv.png);
+  }
+  .icon-wifi {
+    background-image: url(../images/icon_wifi.png);
+  }
+  .icon-pets {
+    background-image: url(../images/icon_pets.png);
+  }
+  
+  @media screen and (max-width: 575px) {
+    .places {
+      width: 100%;
+    }
+    .places article {
+      margin: 20px 0;
+      padding: 20px;
+    }
+    .places .tiny_house {
+      position: relative;
+      left: -10px;
+    }
+  }
