--- a/web_static/styles/103-footer.css
+++ b/web_static/styles/103-footer.css
@@ -1,18 +1,11 @@
 footer {
-        background:white;
-        width: 100%;
-        border-top: 1px solid #CCCCCC;
-        padding-top: 30px;
-        padding-bottom: 30px;
-        bottom: 0;
-        position: fixed;
-        text-align: center;
-}
-
-
-@media only screen and (min-width : 150px) and (max-width : 700px)
-{
-        footer {
-                font-size: 3.5ch;
-        }
-}
+    background-color: white;
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    border-top: 1px solid #cccccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
