--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,10 +1,9 @@
 footer {
-        background:#00FF00;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        height: 60px;
-        width:100%;
-        bottom: 0;
-        position: fixed;
+    background-color: #00ff00;
+    height: 60px;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    position:fixed;
+    justify-content: center;
 }
