--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,9 +1,7 @@
 body {
-        box-sizing: border-box;
-        height: 0%;
-        margin: 0%;
-        padding:0%;
-        color:  #484848;
-        font-size: 14px;
-        font-family: Circular,"Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #484848;
+    font-size: 14px;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
