--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,9 +1,11 @@
 footer {
-        background:white;
-        width: 100%;
-        border-top: 1px solid #CCCCCC;
-        padding-top: 30px;
-        padding-bottom: 30px;
-        bottom: 0;
-        text-align: center;
-}
+    background-color: white;
+    position: fixed;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    border-top: 1px solid #cccccc;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
