--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,26 +1,26 @@
 .filters {
-        color: white;
-        height: 70px;
-        width: 100%;
-        border: 1px solid #DDDDDD;
-        border-radius: 4px;
-        position: relative;
-}
-
-button {
-        position: absolute;
-        font-size: 18px;
-        background-color: #FF5A5F;
-        color: #FFFFFF;
-        top: 50%;
-        height: 48px;
-        margin-top: -24px;
-        right: 30px;
-        width: 20%;
-        border: none;
-        border-radius: 4px;
-}
-
-button:hover {
-        opacity: 90%;
-}
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  section.filters button {
+    font-size: 18px;
+    border: none;
+    border-radius: 4px;
+    background-color: #ff5a5f;
+    color: white;
+    height: 48px;
+    width: 20%;
+    margin-right: 30px;
+    opacity: 1;
+  }
+  
+  section.filters button:hover {
+    opacity: 90%;
+  }
